add form search table pagiation

--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "build-bundle": "vue-cli-service build --target lib --name VueElementProComponents ./src/index.js"
   },
   "dependencies": {
+    "clipboard": "^2.0.10",
     "core-js": "^3.6.5",
     "element-ui": "^2.15.6",
+    "lodash-es": "^4.17.21",
     "vue": "^2.6.11",
-    "vue-router": "^3.2.0",
-    "vuex": "^3.4.0"
+    "vue-fragment": "^1.5.2",
+    "vue-router": "^3.2.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.12",
