--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vue-element-pro-components",
   "description": "This is a vue2、element-ui based component library",
-  "version": "0.5.0",
+  "version": "0.6.0",
   "author": "Fangkang",
   "license": "MIT",
   "keywords": [
@@ -18,6 +18,7 @@
     "url": "https://github.com/fang-kang/vue-element-pro-components"
   },
   "main": "lib/VueElementProComponents.common.js",
+  "unpkg": "lib/VueElementProComponents.umd.min.js",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
