--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
+    "docs:dev": "vuepress dev docs",
+    "docs:build": "vuepress build docs",
     "build-bundle": "vue-cli-service build --target lib --name VueElementProComponents --dest lib ./packages/index.js"
   },
   "dependencies": {
@@ -35,18 +37,23 @@
     "vue-router": "^3.2.0"
   },
   "devDependencies": {
+    "@vitejs/plugin-vue-jsx": "^1.3.3",
     "@vue/cli-plugin-babel": "~4.5.12",
     "@vue/cli-plugin-eslint": "~4.5.12",
     "@vue/cli-plugin-router": "~4.5.12",
     "@vue/cli-plugin-vuex": "~4.5.12",
     "@vue/cli-service": "~4.5.12",
+    "@vuepress/plugin-search": "^2.0.0-beta.35",
+    "@vuepress/theme-default": "^2.0.0-beta.35",
+    "@yanyu-fe/vuepress-plugin-code-block": "^0.0.12",
     "babel-eslint": "^10.1.0",
     "babel-plugin-component": "^1.1.1",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "vuepress": "^2.0.0-beta.36"
   },
   "eslintConfig": {
     "root": true,
