--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vue-element-pro-components",
   "description": "This is a vue2、element-ui based component library",
-  "version": "0.7.0",
+  "version": "0.8.0",
   "author": "Fangkang",
   "license": "MIT",
   "keywords": [
@@ -32,6 +32,7 @@
     "core-js": "^3.6.5",
     "element-ui": "^2.15.6",
     "lodash-es": "^4.17.21",
+    "quill": "^1.3.7",
     "vue": "^2.6.11",
     "vue-fragment": "^1.5.2",
     "vue-router": "^3.2.0"
