--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "vue-element-pro-components",
   "description": "This is a vue2、element-ui based component library",
-  "version": "0.8.0",
+  "version": "0.9.0",
   "author": "Fangkang",
   "license": "MIT",
+  "files": [
+    "lib"
+  ],
   "keywords": [
     "component",
     "vue",
@@ -17,8 +20,7 @@
     "type": "git",
     "url": "https://github.com/fang-kang/vue-element-pro-components"
   },
-  "main": "lib/VueElementProComponents.common.js",
-  "unpkg": "lib/VueElementProComponents.umd.min.js",
+  "main": "lib/index/index.js",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
@@ -27,16 +29,7 @@
     "docs:build": "vuepress build docs",
     "build-bundle": "vue-cli-service build --target lib --name VueElementProComponents --dest lib ./packages/index.js"
   },
-  "dependencies": {
-    "clipboard": "^2.0.10",
-    "core-js": "^3.6.5",
-    "element-ui": "^2.15.6",
-    "lodash-es": "^4.17.21",
-    "quill": "^1.3.7",
-    "vue": "^2.6.11",
-    "vue-fragment": "^1.5.2",
-    "vue-router": "^3.2.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@vitejs/plugin-vue-jsx": "^1.3.3",
     "@vue/cli-plugin-babel": "~4.5.12",
@@ -49,11 +42,19 @@
     "@yanyu-fe/vuepress-plugin-code-block": "^0.0.12",
     "babel-eslint": "^10.1.0",
     "babel-plugin-component": "^1.1.1",
+    "clipboard": "^2.0.10",
+    "core-js": "^3.21.1",
+    "element-ui": "^2.15.6",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "lodash-es": "^4.17.21",
+    "quill": "^1.3.7",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
-    "vue-template-compiler": "^2.6.11",
+    "vue": "2.6.11",
+    "vue-fragment": "^1.5.2",
+    "vue-router": "^3.0.1",
+    "vue-template-compiler": "2.6.11",
     "vuepress": "^2.0.0-beta.36"
   },
   "eslintConfig": {
