chore:update version(1.0.7)

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-element-pro-components",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "This is a vue2、element-ui based component library",
   "private": false,
   "author": "fangkang<https://github.com/fang-kang>",
@@ -21,7 +21,6 @@
     "src",
     "packages"
   ],
-  "style": "lib/theme/index.css",
   "repository": {
     "type": "git",
     "url": "https://github.com/fang-kang/vue-element-pro-components"
@@ -49,7 +48,7 @@
     "clipboard": "^2.0.10",
     "lodash-es": "^4.17.21",
     "vue-fragment": "^1.5.2",
-    "quill": "^1.3.7"
+    "vue-quill-editor": "^3.0.6"
   },
   "devDependencies": {
     "@commitlint/cli": "^8.1.0",
