--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-element-pro-components",
-  "version": "1.0.9",
+  "version": "1.0.11",
   "description": "This is a vue2、element-ui based component library",
   "private": false,
   "author": "fangkang<https://github.com/fang-kang>",
@@ -111,6 +111,7 @@
     "vue-router": "^3.1.3",
     "vue-template-compiler": "^2.6.10",
     "vuepress": "^1.0.4",
+    "vuepress-plugin-demo-container": "^0.2.0",
     "vuex": "^3.1.1",
     "webpack": "^4.39.3",
     "webpack-cli": "^3.3.8",
