--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -22,12 +22,19 @@ jobs:
         with:
           # 选择要使用的 node 版本
           node-version: '14'
+          
+       # 安装pnpm
+      - name: Setup pnpm
+        run: npm i -g pnpm
+      # 如果缓存没有命中，安装依赖
+      - name: Install dependencies
+        run: pnpm install --no-frozen-lockfile
 
       # 执行发布到库
       
       # 运行构建脚本
       - name: Build VuePress site
-        run: npm run docs:build
+        run: pnpm docs:build
       # 查看 workflow 的文档来获取更多信息
       # @see https://github.com/crazy-max/ghaction-github-pages
       - name: Deploy to GitHub Pages
