--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -34,7 +34,7 @@ jobs:
       
       # 运行构建脚本
       - name: Build VuePress site
-        run: pnpm docs:build
+        run: pnpm lib && pnpm docs:build
       # 查看 workflow 的文档来获取更多信息
       # @see https://github.com/crazy-max/ghaction-github-pages
       - name: Deploy to GitHub Pages
