--- a/package.json
+++ b/package.json
@@ -87,7 +87,7 @@
     "postcss-cssnext": "^3.1.0",
     "postcss-nested": "^4.1.2",
     "postcss-simple-vars": "^5.0.2",
-    "prettier": "^1.18.2",
+    "prettier": "2.6.1",
     "rimraf": "^3.0.0",
     "rollup": "^1.21.0",
     "rollup-plugin-alias": "^2.0.0",
