--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-element-pro-components",
-  "version": "1.0.29",
+  "version": "1.0.30",
   "description": "This is a vue2、element-ui based component library",
   "private": false,
   "author": "fangkang<https://github.com/fang-kang>",
@@ -108,10 +108,10 @@
     "stylelint-config-standard": "^18.3.0",
     "stylelint-order": "^3.1.0",
     "stylelint-webpack-plugin": "^0.10.5",
-    "vue": "^2.6.10",
+    "vue": "2.6.14",
     "vue-highlight.js": "^2.2.0",
     "vue-router": "^3.1.3",
-    "vue-template-compiler": "^2.6.10",
+    "vue-template-compiler": "2.6.14",
     "vuepress": "^1.0.4",
     "vuepress-plugin-demo-container": "^0.2.0",
     "vuepress-plugin-nuggets-style-copy": "^1.0.3",
