--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-element-pro-components",
-  "version": "1.0.31",
+  "version": "1.0.32",
   "description": "This is a vue2、element-ui based component library",
   "private": false,
   "author": "fangkang<https://github.com/fang-kang>",
@@ -54,26 +54,25 @@
     "vue-fragment": "1.5.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.16",
-    "@babel/eslint-parser": "^7.12.16",
     "@commitlint/cli": "^8.1.0",
     "@commitlint/config-conventional": "^8.1.0",
-    "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-eslint": "~5.0.0",
-    "@vue/cli-plugin-router": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
+    "@vue/cli-plugin-babel": "^3.11.0",
+    "@vue/cli-plugin-eslint": "^3.11.0",
+    "@vue/cli-plugin-unit-jest": "^3.11.0",
+    "@vue/cli-service": "^3.11.0",
     "@vue/eslint-config-standard": "^4.0.0",
     "@vue/test-utils": "1.0.0-beta.29",
     "@vuepress/plugin-back-to-top": "^1.0.4",
     "@vuepress/plugin-medium-zoom": "^1.0.4",
     "autoprefixer": "^9.6.1",
+    "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.0.3",
     "babel-jest": "^23.6.0",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "babel-polyfill": "^6.26.0",
     "chalk": "^2.4.2",
     "conventional-changelog-cli": "^2.0.23",
-    "core-js": "^3.8.3",
+    "core-js": "^2.6.5",
     "cross-env": "^5.2.1",
     "cssnano": "^4.1.10",
     "element-ui": "^2.15.7",
@@ -89,7 +88,7 @@
     "postcss-cssnext": "^3.1.0",
     "postcss-nested": "^4.1.2",
     "postcss-simple-vars": "^5.0.2",
-    "prettier": "2.6.1",
+    "prettier": "^1.18.2",
     "rimraf": "^3.0.0",
     "rollup": "^1.21.0",
     "rollup-plugin-alias": "^2.0.0",
@@ -110,17 +109,18 @@
     "stylelint-config-standard": "^18.3.0",
     "stylelint-order": "^3.1.0",
     "stylelint-webpack-plugin": "^0.10.5",
-    "vue": "2.6.14",
+    "vue": "2.5.21",
     "vue-highlight.js": "^2.2.0",
-    "vue-router": "^3.5.1",
-    "vue-template-compiler": "2.6.14",
+    "vue-router": "^3.0.1",
+    "vue-server-renderer": "2.5.21",
+    "vue-template-compiler": "2.5.21",
     "vuepress": "^1.0.4",
     "vuepress-plugin-demo-container": "^0.2.0",
     "vuepress-plugin-nuggets-style-copy": "^1.0.3",
     "vuepress-theme-reco": "^1.6.11",
-    "webpack": "^5.72.0",
-    "webpack-cli": "^4.9.2",
-    "webpack-merge": "^5.8.0"
+    "webpack": "^4.39.3",
+    "webpack-cli": "^3.3.8",
+    "webpack-merge": "^4.2.2"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
