chore: update version(1.0.33)

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-element-pro-components",
-  "version": "1.0.32",
+  "version": "1.0.33",
   "description": "This is a vue2、element-ui based component library",
   "private": false,
   "author": "fangkang<https://github.com/fang-kang>",
@@ -54,19 +54,20 @@
     "vue-fragment": "1.5.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.17.10",
+    "@babel/eslint-parser": "7.11.0",
+    "@babel/preset-env": "^7.17.10",
     "@commitlint/cli": "^8.1.0",
     "@commitlint/config-conventional": "^8.1.0",
     "@vue/cli-plugin-babel": "^3.11.0",
     "@vue/cli-plugin-eslint": "^3.11.0",
     "@vue/cli-plugin-unit-jest": "^3.11.0",
-    "@babel/eslint-parser": "7.11.0",
     "@vue/cli-service": "^3.11.0",
     "@vue/eslint-config-standard": "^4.0.0",
     "@vue/test-utils": "1.0.0-beta.29",
     "@vuepress/plugin-back-to-top": "^1.0.4",
     "@vuepress/plugin-medium-zoom": "^1.0.4",
     "autoprefixer": "^9.6.1",
-    "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.0.3",
     "babel-jest": "^23.6.0",
     "babel-plugin-transform-remove-console": "^6.9.4",
@@ -106,15 +107,15 @@
     "runjs": "^4.4.2",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
-    "stylelint": "^10.1.0",
+    "stylelint": "^8.0.0",
     "stylelint-config-standard": "^18.3.0",
     "stylelint-order": "^3.1.0",
     "stylelint-webpack-plugin": "^0.10.5",
-    "vue": "2.5.21",
+    "vue": "2.6.0",
     "vue-highlight.js": "^2.2.0",
     "vue-router": "^3.0.1",
-    "vue-server-renderer": "2.5.21",
-    "vue-template-compiler": "2.5.21",
+    "vue-server-renderer": "2.6.0",
+    "vue-template-compiler": "2.6.0",
     "vuepress": "^1.0.4",
     "vuepress-plugin-demo-container": "^0.2.0",
     "vuepress-plugin-nuggets-style-copy": "^1.0.3",
