--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -23,18 +23,17 @@ jobs:
           # 选择要使用的 node 版本
           node-version: '14'
 
-        # 安装pnpm
-      - name: Setup pnpm
-        run: npm i -g pnpm
-      # 如果缓存没有命中，安装依赖
+        # 安装yarn
+      - name: Setup yarn
+        run: npm i -g yarn
       - name: Install dependencies
-        run: pnpm install --no-frozen-lockfile
+        run: yarn
 
       # 执行发布到库
 
       # 运行构建脚本
       - name: Build VuePress site
-        run: pnpm docs:build
+        run: yarn run docs:build
       # 查看 workflow 的文档来获取更多信息
       # @see https://github.com/crazy-max/ghaction-github-pages
       - name: Deploy to GitHub Pages
