--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-element-pro-components",
-  "version": "1.0.33",
+  "version": "1.0.34",
   "description": "This is a vue2、element-ui based component library",
   "private": false,
   "author": "fangkang<https://github.com/fang-kang>",
@@ -67,6 +67,7 @@
     "@vue/test-utils": "1.0.0-beta.29",
     "@vuepress/plugin-back-to-top": "^1.0.4",
     "@vuepress/plugin-medium-zoom": "^1.0.4",
+    "@vuepress/shared-utils": "^1.9.7",
     "autoprefixer": "^9.6.1",
     "babel-eslint": "^10.0.3",
     "babel-jest": "^23.6.0",
@@ -111,11 +112,11 @@
     "stylelint-config-standard": "^18.3.0",
     "stylelint-order": "^3.1.0",
     "stylelint-webpack-plugin": "^0.10.5",
-    "vue": "2.6.0",
+    "vue": "^2.6.14",
     "vue-highlight.js": "^2.2.0",
     "vue-router": "^3.0.1",
-    "vue-server-renderer": "2.6.0",
-    "vue-template-compiler": "2.6.0",
+    "vue-server-renderer": "^2.6.14",
+    "vue-template-compiler": "^2.6.14",
     "vuepress": "^1.0.4",
     "vuepress-plugin-demo-container": "^0.2.0",
     "vuepress-plugin-nuggets-style-copy": "^1.0.3",
